--- a/html/contacto.html
+++ b/html/contacto.html
@@ -58,7 +58,7 @@
 				<a href="http://www.ghibli.jp/">link</a> <br> De todas formas, ¿por qué no me cuestas qué te ha parecido mi página web? 
 				A continuación te dejo una encuesta, ¡es anónima asi que no te preocupes!: </p> <br>
 				<!--ENCUESTA-->
-				<form class="contacto" method="post" name="encuesta" action="../html/carga.html">
+				<form class="contacto" method="get" name="encuesta" action="../html/carga.html">
 					<label> ¿Cuál es tu película favorita de Studio Ghibli?: &nbsp
 					<select style="font-size:20px;" name="peli">
 						<option> --Selecciona-- </option>
